--- a/css.css
+++ b/css.css
@@ -4,6 +4,29 @@ body {
   height:100vh;
   width:100vw;
   background-color:lightblue;
+  animation-name: body-position;
+  position:absolute;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+}
+
+@keyframes body-position {
+  0%{
+    background-color: lightblue;
+  }
+  20%{
+    background-color:rgb(87, 135, 151);
+  }
+  30%{
+    background-color: rgb(19, 1, 1);
+  }
+  70%{
+    background-color: rgb(87, 135, 151);
+  }
+  100%{
+    background-color: lightblue;
+    
+  }
 }
 
 p {  
@@ -13,63 +36,129 @@ p {
   font-weight:bolder;
   }
 
-.text {
+.cloud {
    display:block; 
   position:absolute;
   padding:10px;  
-  animation-name:change-position;
+  animation-name:cloud-position;
   animation-iteration-count:infinite;
-  animation-timing-function: ease-in-out;
-  animation-duration:5s;
-  text-shadow: 5px 5px 0px rgba(0,0,0,0.1);
-}
-
-@keyframes change-position {
-  0%{transform: translate(0px, 0px);
-    text-shadow: 5px 5px 0px rgba(0,0,0,0.1);
-    background-color: green;
-  }
-  15%{letter-spacing:5px;
-    background-color: yellow;
-  }
-  25%{ letter-spacing:0; background-color: orange;
-   transform:translate(73vw, 50px) scaleX(1.0); }
-  50%{transform:translate(73vw, 83vh) ;
-  letter-spacing:0px;
-  background-color: blue}
-  65%{letter-spacing:5px;
-    background-color: yellow}
-  75%{letter-spacing:0px;
-    background-color: orange;
-    transform:translate(0vw, 83vh);
-  }
-  100%{    transform: translate(0px, 0px);}
-}
-
-.cloud{
+  animation-duration:15s;
+  animation-timing-function: linear;
   height:150px;
   width:280px;
   border-radius:50%;
   background:white;
   border:5px solid white;
   margin-left:200px;
-  position:relative;
   z-index:8;
+}
+
+@keyframes cloud-position {
+  0%{transform: translate(0px, 0px);
+    background-color: rgb(255, 255, 255);
   }
+  20%{
+    transform: translate(20vw,0vh);
+    background-color: rgb(255, 255, 255);
+  }
+  30%{
+    transform: translate(20vw,0vh);
+    background-color: rgb(241, 241, 241);
+  }
+  40%{
+    transform: translate(20vw,0vh);
+    background-color: rgb(238, 238, 238);
+  }
+  60%{
+    transform: translate(20vw,0vh);
+    background-color: rgb(238, 238, 238);
+  }
+  70%{
+    transform: translate(10vw,0vh);
+    background-color: rgb(255, 255, 255);
+  }
+  80%{
+    transform: translate(0vw,0vh);
+    background-color: rgb(255, 255, 255);
+  }
+  100%{
+    transform: translate(0vw,0vh);
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+.sun {
+ display:block; 
+ position:absolute;
+ padding:10px;  
+ animation-name:sun-position;
+ animation-iteration-count:infinite;
+ animation-duration:15s;
+ animation-delay: 2.5s;
+ animation-timing-function: linear;
+}
+
+@keyframes sun-position {
+0%{transform: translate(0px, 0px);
+  background-color: yellow;
+}
+20%{
+  transform: translate(0vw,65vh);
+  background-color: yellow;
+}
+30%{
+  transform: translate(0vw,45vh);
+  background-color: yellow;
+}
+40%{
+  transform: translate(0vw,25vh);
+  background-color: yellow;
+}
+50%{
+  transform: translate(0vw,0vh);
+  background-color: yellow;
+}
+100%{transform: translate(0vw, 0vh);
+  background-color: yellow;
+ }
+}
+
+
 .cloud:before{
   content:"";
   position:absolute;
   height:75px;
   width:200px;
-  background:white;
+  background:rgb(255, 255, 255);
   border-radius:50px;
   border:5px solid white;
   left:-15px;
   bottom:-5px;
+  animation-name: cloud-be;
+  animation-duration:15s;
+  animation-iteration-count:infinite;
   }
 
+@keyframes cloud-be {
+  0%{
+    background-color: rgb(255, 255, 255);
+  }
+  20%{
+    background-color:rgb(238, 239, 240);
+  }
+  30%{
+    background-color: rgb(247, 243, 243);
+  }
+  70%{
+    background-color: rgb(222, 228, 230);
+  }
+  100%{
+    background-color: rgb(255, 255, 255);   
+  }
+}
+
 .cloud:after{
-    content:"";
+  content:"";
   position:absolute;
   height:50px;
   width:205px;
@@ -78,12 +167,35 @@ p {
   border:5px solid white;
   right:-15px;
   bottom:-5px;
+  animation-name: cloud-af;
+  animation-duration: 15s;
+  animation-iteration-count:infinite;
   }
+
+@keyframes cloud-af {
+  0%{
+    background-color: rgb(255, 255, 255);
+  }
+  20%{
+    background-color:rgb(238, 239, 240);
+  }
+  30%{
+    background-color: rgb(247, 243, 243);
+  }
+  70%{
+    background-color: rgb(222, 228, 230);
+  }
+  100%{
+    background-color: rgb(255, 255, 255);  
+  }
+}
+
 .wap {
   display: inline-block;
   width: 90px;
   height: 80px;
 }
+
 .sun {
   height: 100px;
   width: 100px;
@@ -94,3 +206,425 @@ p {
   top: 10px;
   box-shadow: 0 0 2px 2px white, 0 0 4px 4px yellow;
 }
+
+.landscape {
+  display:block; 
+  height: 220px;
+  width: 99%;
+  position: absolute;
+  top: 350px;
+  animation-name:land-position;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+}
+  
+@keyframes land-position {
+  0%{
+    background-color: rgb(22, 170, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{
+    
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+    background-color: rgb(22, 170, 54);
+   }
+  }
+
+  .tree1 {
+  position: absolute;
+  height: 100px;
+  width: 120px;
+  background: rgb(3, 105, 3);
+  border-radius: 50%;
+  left: 120px;
+  top: -125px;
+  border: green 1px solid;
+  animation-name: tree1-position;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+  z-index: 1;
+  }
+
+@keyframes tree1-position {
+  0%{
+    background-color: rgb(21, 172, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{  
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+    background-color: rgb(21, 172, 54);
+  }
+}
+
+  .tree1:before {
+  content: "";
+  position: absolute;
+  height: 100px;
+  width: 140px;
+  background: rgb(3, 105, 3);
+  border-radius: 50%;
+  left: 30px;
+  top: -20px;
+  border: green 1px solid;
+  animation-name: tree1-be;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+  }
+
+@keyframes tree1-be {
+  0%{
+    background-color: rgb(21, 172, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{  
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+    background-color: rgb(21, 172, 54);
+  }
+}
+
+.tree1:after {
+  content: "";
+  height: 100px;
+  width: 130px;
+  background: rgb(3, 105, 3);
+  border-radius: 50%;
+  position: absolute;
+  left: -50px;
+  top: -10px;
+  border: green 1px solid;
+  animation-name: tree1-af;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+  }
+
+@keyframes tree1-af {
+  0%{
+    background-color: rgb(21, 172, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+    background-color: rgb(21, 172, 54);
+  }
+}
+
+.root1 {
+  height: 150px;
+  width: 30px;
+  background: rgb(102, 50, 13);
+  position: absolute;
+  left: 160px;
+  top: -55px;
+  animation-name: root1-position;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+  }
+
+@keyframes  root1-position {
+  0%{
+    background-color: rgb(117, 61, 20);
+  }
+  20%{
+    background-color: rgb(70, 33, 8);
+  }
+  30%{  
+    background-color: rgb(53, 25, 5);
+  }
+  70%{
+    background-color: rgb(117, 61, 20);
+  }
+  100%{
+    background-color: rgb(102, 50, 13);
+   }
+  }
+
+.tree2 {
+  position: absolute;
+  height: 100px;
+  width: 120px;
+  background: rgb(3, 105, 3);
+  border-radius: 50%;
+  left: 30%;
+  top: -70px;
+  border: 1px green solid ;
+  animation-name: tree2-position;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+  z-index: 1;
+  }
+
+@keyframes tree2-position {
+  0%{
+    background-color: rgb(21, 172, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+    background-color: rgb(21, 172, 54);
+    }
+}
+  
+.tree2:before {
+  content: "";
+  position: absolute;
+  height: 100px;
+  width: 140px;
+  background: rgb(3, 105, 3);
+  border-radius: 50%;
+  left: 30px;
+  top: -10px;
+  border: 1px green solid ;
+  animation-name: tree2-be;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+  }
+
+@keyframes tree2-be {
+  0%{
+    background-color: rgb(21, 172, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+    background-color: rgb(21, 172, 54);
+    }
+  }
+  
+.tree2:after {
+  content: "";
+  position: absolute;
+  height: 100px;
+  width: 130px;
+  background: rgb(3, 105, 3);
+  border-radius: 50%;
+  left: -30px;
+  top: -30px;
+  border: 1px green solid ;
+  animation-name: tree2-af;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+}
+
+@keyframes tree2-af {
+  0%{
+    background-color: rgb(21, 172, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+    background-color: rgb(21, 172, 54);
+    }
+}
+  
+.root2 {
+  height: 150px;
+  width: 30px;
+  background: rgb(102, 50, 13);
+  position: absolute;
+  left:35%;
+  top: 0;
+  animation-name: root2-position;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+}
+
+@keyframes  root2-position {
+  0%{
+    background-color: rgb(117, 61, 20);
+  }
+  20%{
+    background-color: rgb(70, 33, 8);
+  }
+  30%{
+    background-color: rgb(53, 25, 5);
+  }
+  70%{
+    background-color: rgb(117, 61, 20);
+  }
+  100%{
+    background-color: rgb(102, 50, 13);
+    }
+}
+
+.tree3 {
+  position: absolute;
+  height: 100px;
+  width: 120px;
+  background: rgb(3, 105, 3);
+  border-radius: 50%;
+  left: 70%;
+  top: -80px;
+  z-index: 1;
+  border: green 1px solid;
+  animation-name: tree3-position;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+}
+
+@keyframes tree3-position {
+  0%{
+    background-color: rgb(21, 172, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+    background-color: rgb(21, 172, 54);
+  }
+}
+    
+.tree3:before {
+  content: "";
+  position: absolute;
+  height: 100px;
+  width: 140px;
+  background: rgb(3, 105, 3);
+  border-radius: 50%;
+  left: 30px;
+  top: -20px;
+  border: green 1px solid;
+  animation-name: tree3-be;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+}
+
+@keyframes tree3-be {
+  0%{
+    background-color: rgb(21, 172, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+  background-color: rgb(21, 172, 54);
+  }
+}
+
+.tree3:after {
+  content: "";
+  position: absolute;
+  height: 100px;
+  width: 130px;
+  background: rgb(3, 105, 3);
+  border-radius: 50%;
+  left: -30px;
+  top: -5px;
+  border: green 1px solid;
+  animation-name: tree3-af;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+}
+
+@keyframes tree3-af {
+  0%{
+    background-color: rgb(21, 172, 54);
+  }
+  20%{
+    background-color: rgb(20, 71, 37);
+  }
+  30%{
+    background-color: rgb(2, 41, 5);
+  }
+  70%{
+    background-color: rgb(19, 71, 37);
+  }
+  100%{
+    background-color: rgb(21, 172, 54);
+   }
+}
+
+.root3 {
+  height: 150px;
+  width: 30px;
+  background: rgb(102, 50, 13);
+  position: absolute;
+  left: 75%;
+  top: -10px;
+  animation-name: root3-position;
+  animation-iteration-count:infinite;
+  animation-duration:15s;
+}
+
+@keyframes  root3-position {
+  0%{
+    background-color: rgb(117, 61, 20);
+  }
+  20%{
+    background-color: rgb(70, 33, 8);
+  }
+  30%{
+    background-color: rgb(53, 25, 5);
+  }
+  70%{
+    background-color: rgb(117, 61, 20);
+  }
+  100%{
+    background-color: rgb(102, 50, 13);
+  }
+}
+
+
+
+
+
